--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@ungap/structured-clone": "^0.3.4",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
-    "docker-deploy": "docker build -t regismdantas/roadmap-me . ; docker run -it -v $(pwd)/src:/app/src -d -p 3000:3000 --name roadmap-me-ctr regismdantas/roadmap-me" 
+    "docker-deploy": "docker rm -f roadmap-me-ctr ; docker build -t regismdantas/roadmap-me . ; docker run -it -v $(pwd)/src:/app/src -d -p 3000:3000 --name roadmap-me-ctr regismdantas/roadmap-me"
   },
   "eslintConfig": {
     "extends": [
