--- a/package.json
+++ b/package.json
@@ -12,13 +12,27 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@ungap/structured-clone": "^0.3.4",
+    "net": "^1.0.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-drive-picker": "^1.1.4",
     "react-markdown": "^8.0.0",
+    "react-remark": "^2.1.0",
     "react-scripts": "5.0.0",
     "react-xarrows": "^2.0.2",
+    "rehype-katex": "^6.0.2",
+    "rehype-mathjax": "^4.0.2",
+    "remark-breaks": "^3.0.2",
+    "remark-emoji": "^3.0.2",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gemoji": "^7.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "remark-mdx": "^2.0.0",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
