--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "remark-frontmatter": "^4.0.1",
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-grid-tables": "^2.1.2",
     "remark-math": "^5.1.1",
     "remark-mdx": "^2.0.0",
     "remark-prism": "^1.3.6",
